--- a/public/locale/_all-en.json
+++ b/public/locale/_all-en.json
@@ -1,1 +1,5 @@
-{}
+{
+  "Error: Trello's data limit is reached for this plugin.": "Error: Trello's data limit is reached for this plugin.",
+  "Error: Trello's data limit for \"{scope}\" is reached for this plugin.": "Error: Trello's data limit for \"{scope}\" is reached for this plugin.",
+  "Error: Trello's data limit for \"{scope}/{visibility}\" is reached for this plugin.": "Error: Trello's data limit for \"{scope}/{visibility}\" is reached for this plugin."
+}
